Bug 161721 - Encrypted frames taglib/Amarok crash
Summary: Encrypted frames taglib/Amarok crash
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-07 00:12 UTC by Andy
Modified: 2008-09-22 13:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2008-05-07 00:12:34 UTC
Version:            (using KDE 4.0.3)
Installed from:    RedHat RPMs
OS:                Linux

Back trace, I can provide these files if necessary.

[garage@localhost ~]$ amarokapp
kbuildsycoca running...
QLayout "unnamed" added to QVBox "unnamed", which already has a layout
QLayout: Adding KToolBar/mainToolBar (child of QVBox/unnamed) to layout for PlaylistWindow/PlaylistWindow
QObject::connect: Incompatible sender/receiver arguments
	StarManager::ratingsColorsChanged() --> ContextBrowser::ratingOrScoreOrLabelsChanged(const QString&)
STARTUP
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
Amarok is crashing...
Running: gdb --nw -n --batch -x /tmp/kde-garage/amarokapheTa.tmp amarokapp 4581
Could not find the frame base for "MetaBundle::readTags(TagLib::AudioProperties::ReadStyle, QValueList<MetaBundle::EmbeddedImage>*)".
Could not find the frame base for "MetaBundle".
Could not find the frame base for "TagDialog::bundleForURL(KURL const&)".
Could not find the frame base for "TagDialog::readMultipleTracks()".
Could not find the frame base for "TagDialog::init()".
Could not find the frame base for "TagDialog".
Could not find the frame base for "FileBrowser::contextMenuActivated(int)".
Could not find the frame base for "FileBrowser::qt_invoke(int, QUObject*)".
Could not find the frame base for "MetaBundle::readTags(TagLib::AudioProperties::ReadStyle, QValueList<MetaBundle::EmbeddedImage>*)".
Could not find the frame base for "MetaBundle::readTags(TagLib::AudioProperties::ReadStyle, QValueList<MetaBundle::EmbeddedImage>*)".
Could not find the frame base for "MetaBundle::readTags(TagLib::AudioProperties::ReadStyle, QValueList<MetaBundle::EmbeddedImage>*)".
Could not find the frame base for "MetaBundle".
Could not find the frame base for "TagDialog::bundleForURL(KURL const&)".
Could not find the frame base for "TagDialog::readMultipleTracks()".
Could not find the frame base for "TagDialog::init()".
Could not find the frame base for "TagDialog".
Could not find the frame base for "FileBrowser::contextMenuActivated(int)".
Could not find the frame base for "FileBrowser::qt_invoke(int, QUObject*)".
Running: file `which amarokapp`
1.4-SVN [NOTstripped][validity: 0.90][frames:  94][line numbers][xine]
Could not find 'kmail' executable.
[garage@localhost ~]$ X Error: BadWindow (invalid Window parameter) 3
  Major opcode:  7
  Minor opcode:  0
  Resource id:  0x3e00052
[garage@localhost ~]$
Comment 1 Mark Kretschmann 2008-05-07 00:19:07 UTC
Could you provide a valid backtrace? The debug output you provided is not helpful.
Comment 2 Andy 2008-05-07 00:24:09 UTC
Sure, no problem!

[garage@localhost ~]$ gdb amarokapp
GNU gdb Fedora (6.8-1.fc9)
Copyright (C) 2008 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-redhat-linux-gnu"...
(gdb) run
Starting program: /usr/bin/amarokapp 
[Thread debugging using libthread_db enabled]
[New Thread 0x7f512d6c87b0 (LWP 4958)]
Detaching after fork from child process 4961.
kbuildsycoca running...
QLayout "unnamed" added to QVBox "unnamed", which already has a layout
QLayout: Adding KToolBar/mainToolBar (child of QVBox/unnamed) to layout for PlaylistWindow/PlaylistWindow
QObject::connect: Incompatible sender/receiver arguments
	StarManager::ratingsColorsChanged() --> ContextBrowser::ratingOrScoreOrLabelsChanged(const QString&)
[New Thread 0x417c8950 (LWP 4974)]
[New Thread 0x421c9950 (LWP 4976)]
[New Thread 0x42bca950 (LWP 4978)]
[Thread 0x421c9950 (LWP 4976) exited]
[New Thread 0x421c9950 (LWP 4979)]
[Thread 0x421c9950 (LWP 4979) exited]
[New Thread 0x421c9950 (LWP 4980)]
[Thread 0x421c9950 (LWP 4980) exited]
[New Thread 0x421c9950 (LWP 4981)]
[Thread 0x421c9950 (LWP 4981) exited]
[New Thread 0x421c9950 (LWP 4982)]
[New Thread 0x435cb950 (LWP 4983)]
[New Thread 0x43fcc950 (LWP 4984)]
[New Thread 0x449cd950 (LWP 4985)]
[New Thread 0x453ce950 (LWP 4986)]
STARTUP
[New Thread 0x45dcf950 (LWP 4987)]
[Thread 0x45dcf950 (LWP 4987) exited]
Detaching after fork from child process 4990.
[New Thread 0x45dcf950 (LWP 4991)]
[Thread 0x45dcf950 (LWP 4991) exited]
[Thread 0x417c8950 (LWP 4974) exited]
[New Thread 0x417c8950 (LWP 4992)]
[Thread 0x417c8950 (LWP 4992) exited]
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
TagLib: Encrypted frames are currently not supported.
[New Thread 0x417c8950 (LWP 4999)]
TagLib: Encrypted frames are currently not supported.

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x417c8950 (LWP 4999)]
0x00000036d9e46806 in TagLib::String::String () from /usr/lib64/libtag.so.1
Missing separate debuginfos, use: debuginfo-install a52dec.x86_64 acl.x86_64 alsa-lib.x86_64 alsa-plugins.x86_64 attr.x86_64 e2fsprogs.x86_64 expat.x86_64 faac.x86_64 faad2.x86_64 ffmpeg.x86_64 flac.x86_64 fontconfig.x86_64 freetype.x86_64 gcc.x86_64 glibc.x86_64 gsm.x86_64 kdelibs3.x86_64 keyutils.x86_64 krb5.x86_64 lame.x86_64 lcms.x86_64 libICE.x86_64 libSM.x86_64 libX11.x86_64 libXau.x86_64 libXcursor.x86_64 libXdamage.x86_64 libXdmcp.x86_64 libXext.x86_64 libXfixes.x86_64 libXft.x86_64 libXi.x86_64 libXinerama.x86_64 libXrandr.x86_64 libXrender.x86_64 libXxf86vm.x86_64 libart_lgpl.x86_64 libcap.x86_64 libcdio.x86_64 libdrm.x86_64 libidn.x86_64 libjpeg.x86_64 libmng.x86_64 libmodplug.x86_64 libmp4v2.x86_64 libogg.x86_64 libpng.x86_64 libselinux.x86_64 libtheora.x86_64 libutempter.x86_64 libvorbis.x86_64 libxcb.x86_64 mesa.x86_64 mysql.x86_64 openssl.x86_64 pcre.x86_64 pulseaudio.x86_64 qt3.x86_64 speex.x86_64 taglib.x86_64 vcdimager.x86_64 wavpack.x86_64 x264.x86_64 xine-lib-extras-nonfree.x86_64 xine-lib.x86_64 xvidcore.x86_64 zlib.x86_64
Comment 3 Ian Monroe 2008-05-07 04:09:08 UTC
The backtrace is still invalid. The last line tells you what you need to do. (Wow, that's really helpful for everyone.)

I'm going to reassign this to Wheels since "encrypted header" does sound like something more likely to cause a crash in Amarok then Taglib. We're still CCed though.
Comment 4 Ian Monroe 2008-05-07 04:09:53 UTC
err, I meant more likely in Taglib then Amarok of course. :)
Comment 5 Andy 2008-05-07 12:10:35 UTC
I'm happy to provide more, just someone will have to walk me through it.  I've never been asked to provide more than the above!

Comment 6 Jeff Mitchell 2008-05-07 20:17:03 UTC
Andy, as Ian mentioned, the last line above tells you what you'll need for the backtrace.  Run that debuginfo-install command.  Then next time, if all goes well, you'll get a proper backtrace.
Comment 7 Andy 2008-05-07 20:28:07 UTC
(gdb) debuginfo-install
Undefined command: "debuginfo-install". Try "help".
(gdb)

Sorry guys, gdb is new to me!  Help doesn't seem to help either, that command is not listed..
Comment 8 Scott Wheeler 2008-05-08 03:59:24 UTC
This doesn't necessarily have anything to do with encrypted frames.  TagLib just spits that out when it runs into encrypted frames and then for the most part ignores them.  If you send the problematic file to wheeler@kde.org with the title 151721.mp3 I'll see if I can reproduce it here.
Comment 9 Rex Dieter 2008-05-08 13:36:46 UTC
Andy, debuginfo-install is part of yum-utils.
Comment 10 Andy 2008-05-08 15:01:29 UTC
How about this?

TagLib: Encrypted frames are currently not supported.

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x416b9950 (LWP 15984)]
String (this=0x416b7df0, s=@0x26322a8) at /usr/src/debug/taglib-1.5/taglib/toolkit/taglib.h:72
72	    void ref() { refCount++; }

Scott, I'll email a file example in a few minutes.
Comment 11 Scott Wheeler 2008-05-09 01:53:15 UTC
I can confirm this with the latest TagLib sources.  I'll look into it.
Comment 12 Scott Wheeler 2008-05-09 02:36:41 UTC
SVN commit 805637 by wheeler:

Do a dynamic_cast on these instead of a static since in the case of a non-supported
frame flag the frame will still be added to the list, but using the UnknownFrame type
rather than the canonical type.  At the moment, on systems with a build in zlib, this
should only happen for the (very rare) encrypted frames.

BUG:161721
CCMAIL:taglib-devel@kde.org


 M  +3 -1      id3v2tag.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805637
Comment 13 Andy 2008-05-09 02:43:24 UTC
Thanks Scott!
Comment 14 Seb Ruiz 2008-09-22 01:57:17 UTC
reopen until ported to Amarok 2.
Comment 15 Seb Ruiz 2008-09-22 11:23:31 UTC
Erm, my mistake, this patch wasn't against Amarok.
Comment 16 Seb Ruiz 2008-09-22 13:02:08 UTC
*** Bug 171443 has been marked as a duplicate of this bug. ***