Do a dynamic_cast on these instead of a static since in the case of a non-supported frame flag the frame will still be added to the list, but using the UnknownFrame type rather than the canonical type.  At the moment, on systems with a build in zlib, this should only happen for the (very rare) encrypted frames.

BUG:161721
CCMAIL:taglib-devel@kde.org


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@805637 283d02a7-25f6-0310-bc7c-ecb5cbfe19da